# agent-mesh-federated-runtime

./: .codeclimate.yml  .deepsource.toml  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .sonarcloud.properties  .yamllint.yaml  ACADEMIC_MANUSCRIPT_ADAPTIVE_CONSENSUS.md  ACADEMIC_PUBLICATION_PACKAGE.md  API_REFERENCE.md  ARCHITECTURE.md  AUTONOMOUS_IMPLEMENTATION_COMPLETE.md  AUTONOMOUS_SDLC_FINAL_VALIDATION.md  AUTONOMOUS_SDLC_IMPLEMENTATION_COMPLETE.md  AUTONOMOUS_SDLC_IMPLEMENTATION_FINAL_VALIDATION.md  BACKLOG.md  BREAKTHROUGH_RESEARCH_PUBLICATION_PACKAGE.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  README.md  RESEARCH_EXECUTIVE_SUMMARY.md  RESEARCH_MANUSCRIPTS_BREAKTHROUGH_CONSENSUS.md  RESEARCH_PUBLICATION_PACKAGE.md  SBOM.md  SECURITY.md  TERRAGON_IMPLEMENTATION_COMPLETE.md  TERRAGON_IMPLEMENTATION_SUMMARY.md  WORKFLOWS.md  (+71 more)
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: SECURITY.md  dependabot.yml  project-metrics.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/workflows/: ci.yml  dependency-update.yml  production-deploy.yml  release.yml  security.yml
.terragon/: config.yaml  pr_template.md  scoring-engine.py  sdlc-config.yaml  value-metrics.json  value-tracker.py
config/environments/: production.yaml  staging.yaml
configs/: global-deployment.yaml  nginx.conf  prometheus.yml  staging.json
configs/monitoring/: prometheus.yml
configs/monitoring/alerts/: agent-mesh-alerts.yml
deploy/: Dockerfile  docker-compose.prod.yml  entrypoint.sh  kubernetes.yaml  production_deploy.sh
docs/: CICD_OPTIMIZATION.md  DEPLOYMENT.md  DEVELOPMENT.md  INTEGRATION_GUIDE.md  MONITORING.md  ROADMAP.md  SETUP_REQUIRED.md
docs/adr/: 000-adr-template.md  001-p2p-networking-choice.md  002-consensus-protocol-selection.md
docs/deployment/: README.md
docs/guides/: README.md
docs/guides/user/: getting-started.md
docs/monitoring/: README.md
docs/workflows/: GITHUB_ACTIONS_SETUP.md  MANUAL_SETUP.md  README.md  WORKFLOW_SETUP_GUIDE.md
docs/workflows/examples/: advanced-security.yml  cd.yml  ci.yml  dependency-update.yml  release.yml  security-scan.yml
examples/: basic_federated_learning.py  robust_mesh_demo.py  scaling_mesh_demo.py  simple_mesh_demo.py
infrastructure/: global-deployment-strategy.md
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  security-policies.yaml
migrations/: 001_initial_schema.py  __init__.py  migration_runner.py
monitoring/: alertmanager.yml  elasticsearch-template.json  grafana-dashboards.json  jaeger-config.yml  prometheus.yml
monitoring/logging/: fluentd.conf
monitoring/rules/: agent_mesh.yml
publications/: executive_summary_1755216355.md  research_paper_1755216364.md  technical_documentation_1755216364.md
quantum_research_results/: quantum_security_research_1755216166.json
research_results/: research_results_1755216191.json
research_validation_results/: comprehensive_validation_results.json  validation_summary.md
scripts/: benchmark.py  build-optimizer.py  build.sh  check-docs.py  check-license-header.py  check_model_sizes.py  check_performance_regression.py  comprehensive_validation.py  dependency-updater.py  dependency_free_validation.py  deploy.py  deploy.sh  environment-manager.py  health-check.py  health_check.py  integration-health-check.py  metrics-collector.py  performance-optimizer.py  performance-regression.py  performance_benchmark.py  repository-automation.py  security-scan.sh  security_assessment.py  setup.py  simple_deploy.py  validate-checkpoint-implementation.py  validate-docker-build.sh  validate-helm-charts.sh  validate-sdlc-config.py
simplified_research_results/: analysis.json  raw_results.json  research_summary.md  validation_log.txt
src/agent_mesh/: __init__.py  cli.py
src/agent_mesh/autonomous/: __init__.py  adaptive_optimizer.py  autonomous_sdlc_optimizer.py  decision_engine.py  intelligent_router.py  learning_coordinator.py  self_healing.py
src/agent_mesh/coordination/: __init__.py  agent_mesh.py  task_scheduler.py
src/agent_mesh/core/: __init__.py  access_control.py  auto_scaler.py  autonomous_performance_optimizer.py  autoscaler.py  cache.py  consensus.py  discovery.py  error_handling.py  hardware_acceleration.py  health.py  mesh_node.py  metrics.py  monitoring.py  network.py  performance.py  performance_optimizer.py  platform.py  progressive_quality_gates.py  protocol_optimization.py  scaling.py  security.py  security_enhanced.py  serialization.py  serialization_simple.py  simple_network.py  validation.py
src/agent_mesh/database/: __init__.py  connection.py  models.py  repositories.py
src/agent_mesh/federated/: __init__.py  aggregator.py  algorithms.py  learner.py  privacy.py
src/agent_mesh/monitoring/: comprehensive_monitor.py  realtime_analytics_dashboard.py
src/agent_mesh/performance/: quantum_optimizer.py
src/agent_mesh/research/: __init__.py  adaptive_consensus.py  adaptive_network_topology.py  advanced_consensus.py  advanced_neural_spike_consensus.py  autonomous_differential_privacy_optimizer.py  autonomous_privacy.py  comprehensive_research_validation_framework.py  cross_algorithm_benchmark_framework.py  multimodal_privacy_preserving_federated_learning.py  neuromorphic_consensus.py  (+9 more)
tests/: README.md  conftest.py  coverage.ini  test_comprehensive.py  test_integration.py
tests/e2e/: test_full_mesh_system.py  test_full_system.py
tests/fixtures/: README.md  __init__.py  data_fixtures.py
tests/integration/: test_network_integration.py  test_robust_features.py  test_secure_network_integration.py
tests/performance/: test_benchmarks.py  test_load_scenarios.py
tests/security/: README.md
tests/unit/: test_crypto_network.py  test_example.py
tests/utils/: mock_helpers.py  test_helpers.py
(+5 files in other folders)
